# google-cloud-cpp

./: .typos.toml  BUILD  CHANGELOG.md  CMakeLists.txt  METADATA  MODULE.bazel  OWNERS  README.md  WORKSPACE  cloud_cpp.blueprint  copy.bara.sky  libraries.bzl
.github/: renovate.json
generator/testdata/: BUILD.bazel
google/cloud/bigquery/: BUILD.bazel  CMakeLists.txt  README.md  bigquery_generated.cmake  google_cloud_cpp_bigquery_enhanced.bzl  service_dirs.bzl  service_dirs.cmake
google/cloud/bigquery/analyticshub/v1/: analytics_hub_client.cc  analytics_hub_client.h
google/cloud/bigquery/biglake/v1/: metastore_client.h
google/cloud/bigquery/connection/v1/: connection_client.h
google/cloud/bigquery/datapolicies/v1/: data_policy_client.h
google/cloud/bigquery/datasets/v2/: datasets_client.cc  datasets_client.h  datasets_connection.cc  datasets_connection.h  datasets_connection_idempotency_policy.cc  datasets_connection_idempotency_policy.h  datasets_options.h  datasets_proto_export.h  datasets_rest_connection.cc  datasets_rest_connection.h
google/cloud/bigquery/datatransfer/v1/: data_transfer_client.h
google/cloud/bigquery/doc/: environment-variables.dox  main.dox  override-authentication.dox  override-endpoint.dox  override-retry-policies.dox
google/cloud/bigquery/enhanced/v2/: bigquery_enhanced.cc  bigquery_enhanced.h
google/cloud/bigquery/jobs/v2/: jobs_client.cc  jobs_client.h  jobs_connection.cc  jobs_connection.h  jobs_connection_idempotency_policy.cc  jobs_connection_idempotency_policy.h  jobs_options.h  jobs_proto_export.h  jobs_rest_connection.cc  jobs_rest_connection.h
google/cloud/bigquery/migration/v2/: migration_client.h
google/cloud/bigquery/models/v2/: models_client.cc  models_client.h  models_connection.cc  models_connection.h  models_connection_idempotency_policy.cc  models_connection_idempotency_policy.h  models_options.h  models_proto_export.h  models_rest_connection.cc  models_rest_connection.h
google/cloud/bigquery/projects/v2/: projects_client.cc  projects_client.h  projects_connection.cc  projects_connection.h  projects_connection_idempotency_policy.cc  projects_connection_idempotency_policy.h  projects_options.h  projects_proto_export.h  projects_rest_connection.cc  projects_rest_connection.h
google/cloud/bigquery/quickstart/: BUILD.bazel  CMakeLists.txt  WORKSPACE.bazel  quickstart.cc  quickstart_generated.cc
google/cloud/bigquery/reservation/v1/: reservation_client.h
google/cloud/bigquery/routines/v2/: routines_client.cc  routines_client.h  routines_connection.cc  routines_connection.h  routines_connection_idempotency_policy.cc  routines_connection_idempotency_policy.h  routines_options.h  routines_proto_export.h  routines_rest_connection.cc  routines_rest_connection.h
google/cloud/bigquery/row_access_policies/v2/: row_access_policies_client.cc  row_access_policies_client.h  row_access_policies_connection.cc  row_access_policies_connection.h  row_access_policies_connection_idempotency_policy.cc  row_access_policies_connection_idempotency_policy.h  row_access_policies_options.h  row_access_policies_proto_export.h  row_access_policies_rest_connection.cc  (+1 more)
(+4213 files in other folders)
