package(default_visibility = ["//visibility:public"])

#load("//rules_gapic/cpp:cc_gapic.bzl", "cc_gapic_library", "cc_gapic_srcjar")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_google_api_codegen//rules_gapic:gapic.bzl", "proto_library_with_info")

cc_proto_library(
    name = "library_cc_proto",
    deps = ["//google/example/library/v1:library_proto"],
)

cc_grpc_library(
    name = "library_cc_grpc",
    srcs = [
        "//google/example/library/v1:library_proto",
    ],
    grpc_only = True,
    use_external = True,
    well_known_protos = True,
    deps = [
        ":library_cc_proto",
        "@com_google_googleapis//google/longrunning:longrunning_cc_grpc",
    ],
)

#
#filegroup(
#    name = "library_service_baseline",
#    srcs = glob(["google/example/library/v1/**"]),
#)
